--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=product
-server.port=7070
+server.port=${PORT:0}
+
+#Configuracion de puertos dinamicos para levantar instancias diferentes de cada microservicio
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
